--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.3.1",
     "three": "^0.169.0",
     "vite-plugin-glsl": "^1.3.0",
-    "vite-plugin-qrcode": "^0.2.3"
+    "vite-plugin-qrcode": "^0.2.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
