--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-router": "^1.59.0",
     "@types/three": "^0.169.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.169.0",
