--- a/app/package.json
+++ b/app/package.json
@@ -14,12 +14,15 @@
     "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
+    "@react-three/rapier": "^1.5.0",
     "@tanstack/react-router": "^1.59.0",
     "@types/three": "^0.169.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "ecctrl": "^1.0.92",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "simplex-noise": "^4.0.3",
     "three": "^0.169.0",
     "vite-plugin-glsl": "^1.3.0",
     "vite-plugin-qrcode": "^0.2.3",
