--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "ecctrl": "^1.0.92",
     "lucide-react": "^0.453.0",
+    "r3f-perf": "^7.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "simplex-noise": "^4.0.3",
