--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-spring/three": "^9.7.4",
     "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.114.0",
@@ -17,10 +21,15 @@
     "@tanstack/react-router": "^1.59.0",
     "@types/three": "^0.169.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
-    "lucide-react": "^0.453.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
+    "vaul": "^1.1.1",
     "vite-plugin-glsl": "^1.3.0",
     "vite-plugin-qrcode": "^0.2.3",
     "zod": "^3.23.8"
@@ -28,6 +37,7 @@
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@tanstack/router-plugin": "^1.59.0",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
